--- a/product_lists.html
+++ b/product_lists.html
@@ -538,8 +538,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-10 col-sm-8 col-xs-12 min-height pad_r_l">
-                    <div class="border-left pad_r_l">
+                <div class="col-md-10 col-sm-8 col-xs-12 min-height pad_l">
+                    <div class="border-left pad_l">
                         <div class="row border-bottom pdbtm">
                             <div class="col-md-9 col-xs-12">
                                 <h3 class="mt100"> Products by this seller (150)</h3>
@@ -654,7 +654,7 @@
                                         <figure>        
                                             <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                 <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                    <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
                                                 </div>      
                                             </a>        
                                         </figure>   
@@ -687,7 +687,7 @@
                                         <figure>        
                                             <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                 <div class="grid-img">
-                                                    <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
+                                                    <img src="images/Trendy-5.jpg" class="img-responsive" alt="">
                                                 </div>      
                                             </a>        
                                         </figure>   
@@ -716,7 +716,124 @@
                                         <figure>        
                                             <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                 <div class="grid-img">
+                                                    <img src="images/Trendy-6.jpg" class="img-responsive" alt="">
+                                                </div>      
+                                            </a>        
+                                        </figure>   
+                                    </div>
+
+                                    <div class="description">
+                                        <div class="adrs mt10 rttng">
+                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
+                                        </div>
+                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
+                                        <div class="block">
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
+                                    </div>
+                                </div>
+                            </div>  
+                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
+                                <div class="grid-arr">
+                                    <div class="grid-arrival">
+                                        <figure>        
+                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                <div class="grid-img">
+                                                    <img src="images/Trendy-1.jpg" class="img-responsive" alt="">
+                                                </div>      
+                                            </a>        
+                                        </figure>   
+                                    </div>
+
+                                    <div class="description">
+                                        <div class="adrs mt10 rttng">
+                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
+                                        </div>
+                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
+                                        <div class="block">
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
+                                    </div>
+                                </div>
+                            </div>  
+                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
+                                <div class="grid-arr">
+                                    <div class="grid-arrival">
+                                        <figure>        
+                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                <div class="grid-img">
                                                     <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                </div>      
+                                            </a>        
+                                        </figure>   
+                                    </div>
+
+                                    <div class="description">
+                                        <div class="adrs mt10 rttng">
+                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
+                                        </div>
+                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
+                                        <div class="block">
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
+                                    </div>
+                                </div>
+                            </div>                                                 
+
+                        </div>
+                        <div class="row prodt_page">
+
+                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
+                                <div class="grid-arr">
+                                    <div class="grid-arrival">
+                                        <figure>        
+                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                <div class="grid-img">
+                                                    <img src="images/Trendy-3.jpg" class="img-responsive" alt="">
+                                                </div>      
+                                            </a>        
+                                        </figure>   
+                                    </div>
+
+                                    <div class="description">
+                                        <div class="adrs mt10 rttng">
+                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
+                                        </div>
+                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
+                                        <div class="block">
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star checked"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
+                                    </div>
+                                </div>
+                            </div>   
+
+                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
+                                <div class="grid-arr">
+                                    <div class="grid-arrival">
+                                        <figure>        
+                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                <div class="grid-img">
+                                                    <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
                                                 </div>      
                                             </a>        
                                         </figure>   
@@ -772,124 +889,7 @@
                                         <figure>        
                                             <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                 <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
-                                                </div>      
-                                            </a>        
-                                        </figure>   
-                                    </div>
-
-                                    <div class="description">
-                                        <div class="adrs mt10 rttng">
-                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
-                                        </div>
-                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
-                                        <div class="block">
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
-                                    </div>
-                                </div>
-                            </div>                                                 
-
-                        </div>
-                        <div class="row prodt_page">
-
-                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                <div class="grid-arr">
-                                    <div class="grid-arrival">
-                                        <figure>        
-                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
-                                                </div>      
-                                            </a>        
-                                        </figure>   
-                                    </div>
-
-                                    <div class="description">
-                                        <div class="adrs mt10 rttng">
-                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
-                                        </div>
-                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
-                                        <div class="block">
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
-                                    </div>
-                                </div>
-                            </div>   
-
-                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                <div class="grid-arr">
-                                    <div class="grid-arrival">
-                                        <figure>        
-                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
-                                                </div>      
-                                            </a>        
-                                        </figure>   
-                                    </div>
-
-                                    <div class="description">
-                                        <div class="adrs mt10 rttng">
-                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
-                                        </div>
-                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
-                                        <div class="block">
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
-                                    </div>
-                                </div>
-                            </div>  
-                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                <div class="grid-arr">
-                                    <div class="grid-arrival">
-                                        <figure>        
-                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
-                                                </div>      
-                                            </a>        
-                                        </figure>   
-                                    </div>
-
-                                    <div class="description">
-                                        <div class="adrs mt10 rttng">
-                                            <p class=""> <span class="rating"><span class="rat_str">4.3 <i class="icon-star"></i></span></span></p>
-                                        </div>
-                                        <h6><a href="#" class="bld">Samsung 2.0 gaming console i7,8GB devices with updated technologies </a></h6>
-                                        <div class="block">
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star checked"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </div>
-                                        <p><span class="item_price bld">Rs35000.00</span> <del>$1090.00</del> <span class="green caps">(60% OFF)</span></p>
-                                    </div>
-                                </div>
-                            </div>  
-                            <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
-                                <div class="grid-arr">
-                                    <div class="grid-arrival">
-                                        <figure>        
-                                            <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                                <div class="grid-img">
-                                                    <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                    <img src="images/Trendy-6.jpg" class="img-responsive" alt="">
                                                 </div>      
                                             </a>        
                                         </figure>   
@@ -1045,16 +1045,7 @@
 
 
 
-                            <div class="row text-center fw vwm"><a href="#">view more <i class="icon-plus"></i></a></div>  
-
-
-
-
-
-
-
-
-
+                            <div class="row text-center home_view_more"><a href="#" class="btn arima">view more <i class="icon-plus"></i></a></div>  
 
 
 
