--- a/shop_detail.html
+++ b/shop_detail.html
@@ -626,7 +626,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="well well-sm open_close_tm">
                                     <h3>Today</h3>
-                                    <i class="fas fa-clock"></i>
+                                    <i class="far fa-clock"></i>
                                     <div class="closed_hours">10:00 AM - 8:00 PM Closed</div>
                                 </div>
                             </div>
