--- a/shop_detail.html
+++ b/shop_detail.html
@@ -627,7 +627,7 @@
                                 <div class="well well-sm open_close_tm">
                                     <h3>Today</h3>
                                     <i class="far fa-clock"></i>
-                                    <div class="closed_hours">10:00 AM - 8:00 PM Closed</div>
+                                    <div class="closed_hours">10:00 AM - 8:00 PM <span class="lead">Closed</span></div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12  hrs_sec">
