--- a/product_item.html
+++ b/product_item.html
@@ -7,10 +7,13 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/owl.carousel.min.css" />
         <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-        <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" /> -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/product.css" />
+        <link rel="stylesheet" href="css/product_detail.css" />
+
+        <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/common.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -286,8 +289,9 @@
                     <div class="col-xs-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Product & Shops</li>
+                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="product_lists.html">Product & Shops</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Samsung Edge mobile</li>
                             </ol>
                         </nav>
                     </div>
@@ -295,9 +299,81 @@
             </div>
         </section>
 
+        <section class="product_image_pod">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-1 col-sm-1 col-xs-12 thumbnail_image_detail">
+                        <div class="col-md-12 col-sm-12 col-xs-12 no-padding img_wrapper">
+                            <img src="images/thumbnail_mobile.png" class="img-responsive border_1" />
+                        </div>
+                        <div class="col-md-12 col-sm-12 col-xs-12 no-padding img_wrapper">
+                            <img src="images/thumbnail_mobile.png" class="img-responsive border_1" />
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-sm-5 col-xs-12">
+                        <div class="big_image_wraper">
+                            <img src="images/mobile_logo_big.png"  class="img-responsive" width="500"/>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <div class="product_deta_section">
+                            <h2 class="tite">Panasonic Silver Eluga I3 Mega 16GB</h2>
+                            <span class="rev">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span class="review">3 Review(s)</span>
+                            </span>
+
+                            <span class="pip">
+                                |
+                            </span>
+                            <span class="add_review">
+                                <a href="#">Add a review</a>
+                            </span>
+                            <span class="pip">
+                                |
+                            </span>
+                            <span class="share">
+                                <p>Share:</p>
+                                <a href="facebook.com"><i class="icon-facebook"></i></a>
+                                <a href="twitter.com"><i class="icon-twitter"></i></a>
+                                <a href="google.plus.com.com"><i class="icon-google-plus"></i></a>
+                                <a href="facebook.com"><i class="icon-pinterest"></i></a>
+                                <a href="facebook.com"><i class="icon-instagram"></i></a>
+                                <a href="facebook.com"><i class="icon-envelope-alt"></i></a>
+                            </span>
+                            <p class="price">
+                                <del>Rs. 4109</del><span class="item_price">Rs. 3500</span><span class="green caps">(60% OFF)</span>
+                            </p>
+                            <p class="ava">AVAILABILITY : <span class="grey">In stock</span></p>
+                            <p class="prod_code">PRODUCT CODE : <span class="grey">#765576767</span></p>
+                            <p class="tags">TAGS:
+                                <a href="">Dual sim</a>
+                                <a href="">, Android</a>
+                                <a href="">, Samsung</a>
+                            </p>
+                            <p class="descrptn">
+                                Donec sem lorem laoreet tempor un risus vitae, rutrum sodales nibh suspendisse est congue metus nunc, id viverra elit loreti rhoncus quis consecteur es. Donec pulvinar tempor lorem a pretium justo interdum.
+                            </p>
+                            <ul class="features">
+                                <li>4 GB RAM</li>
+                                <li>128 GB internal memory</li>
+                                <li>4 GB ram</li>
+                                <li> Free shipping with 4 days delivery</li>
+                                <li>3300 Mah</li>
+
+                            </ul>
+                        </div>                       
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
-        <section class="pdp-section product-specs " id="prodDescCont">
+<!--        <section class="pdp-section product-specs " id="prodDescCont">
             <div class="comp comp-product-specs reset-padding" id="productSpecs">
                 <div class="tabs clearfix">
                     <ul>
@@ -551,7 +627,8 @@
                     <span class="check"><i class="sd-icon sd-icon-checkmark"></i></span>
                     <span>Thank You for submitting your response.</span>
                 </div>
-            </div></section>
+            </div>
+        </section>-->
 
 
         <!-- Footer -->
