--- a/shop_detail.html
+++ b/shop_detail.html
@@ -414,7 +414,7 @@
                                     <div class="col-md-6 col-sm-6 col-xs-12 pics">
                                         <a href=""><img src="images/userpro.png" class="img-responsive"></a>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 col-xs-12 pics">
+                                    <div class="col-md-6 col-sm-6 col-xs-12 pics review_image">
                                         <p>Jasmine A.</p>
                                         <p><img src="images/friends.png"> 57 friends</p>
                                         <p><img src="images/str.png"> 2 reviews</p>
@@ -457,7 +457,7 @@
                                     <div class="col-md-6 col-sm-6 col-xs-12 pics">
                                         <a href=""><img src="images/userpro.png" class="img-responsive"></a>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 col-xs-12 pics">
+                                    <div class="col-md-6 col-sm-6 col-xs-12 pics review_image">
                                         <p>Jasmine A.</p>
                                         <p><img src="images/friends.png"> 57 friends</p>
                                         <p><img src="images/str.png"> 2 reviews</p>
@@ -627,7 +627,7 @@
                                 <div class="well well-sm open_close_tm">
                                     <h3>Today</h3>
                                     <i class="far fa-clock"></i>
-                                    <div class="closed_hours">10:00 AM - 8:00 PM <span class="lead">Closed</span></div>
+                                    <div class="closed_hours">10:00 AM - 8:00 PM <span class="bold">Closed</span></div>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12  hrs_sec">
